fix: background in dark mode
Fixes #225

--- a/src/examples/dark-editor.css
+++ b/src/examples/dark-editor.css
@@ -47,5 +47,6 @@
   --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
 
   color: var(--baseText);
-  background: var(--baseBg);
+  --basePageBg: black;
+  background: var(--basePageBg);
 }
